--- a/1.API/LiberacaoCredito.Api/LiberacaoCredito.Api.csproj
+++ b/1.API/LiberacaoCredito.Api/LiberacaoCredito.Api.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Liberacao.Infra.CrossCutting.IoC\Liberacao.Infra.CrossCutting.IoC.csproj" />
+      <ProjectReference Include="..\LiberacaoCredito.Infra.CrossCutting.IoC\LiberacaoCredito.Infra.CrossCutting.IoC.csproj" />
       <ProjectReference Include="..\LiberacaoCredito.Application\LiberacaoCredito.Application.csproj" />
       <ProjectReference Include="..\LiberacaoCredito.Domain\LiberacaoCredito.Domain.csproj" />
     </ItemGroup>
